very rarely, angular misfires and places a duplicate custom indicator. Grrr! Ensure it is invisible if it happens [PT #185142893]

--- a/src/applications/primo/custom-styles.scss
+++ b/src/applications/primo/custom-styles.scss
@@ -1528,6 +1528,11 @@ prm-main-menu .my-feedback-ctm {
         background-size: 11px;
     }
 }
+// very rarely, angular misfires and places a duplicate custom indicator. Ensure it is invisible if it happens
+.culturalAdviceMark ~ .culturalAdviceMark,
+.readingListMark ~ .readingListMark {
+    display: none;
+}
 .readingListMarkIcon path {
     fill: $green;
 }
